--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tableauv2",
+  "name": "tableauv3",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,9 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-table": "^7.6.2",
+    "react-table-hoc-draggable-columns": "^1.2.5",
+    "selectly": "^0.5.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -36,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "prettier-eslint": "^12.0.0"
   }
 }
